# file_diff_analyzer

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
docs/: API_REFERENCE.md  CHANGELOG.md  CONTRIBUTING.md  __init__.py
examples/: __init__.py  basic_usage.py  s3_comparison_example.py  universal_analysis.py
src/file_diff_analyzer/: __init__.py  analyzer.py  extractors.py  models.py  s3_analyzer.py  s3_client.py  s3_models.py  universal_analyzer.py
tests/: __init__.py  conftest.py  test_analyzer.py  test_roadmap_comparison.py  test_s3_integration.py  test_universal_analyzer.py
